eos-deployment-manifests/micro-services-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eos-micro-services-admin
  labels:
    app: eos-micro-services-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eos-micro-services-admin
  template:
    metadata:
      labels:
        app: eos-micro-services-admin
    spec:
      containers:
      - name: eos-micro-services-admin
        image: 339713094217.dkr.ecr.us-east-1.amazonaws.com/micro-services-admin:latest
        ports:
        - containerPort: 8090
