eos-deployment-manifests/micro-services-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos-micro-services-admin
spec:
  rules:
  - host: microservice-admin.339713094217.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eos-micro-services-admin-service
            port:
              number: 8090
  ingressClassName: nginx
